<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    tools:ignore="UnusedAttribute">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/sms_animation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:lottie_rawRes="@raw/ver_sms"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_sms_TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="5">

            <EditText
                android:id="@+id/user_sms_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/verification_code"
                android:inputType="number"
                app:counterMaxLength="5" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_n"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/get_code_again"
            android:textColor="#8E24AA"
            android:textSize="10sp" />

        <Button
            android:visibility="gone"
            android:id="@+id/dbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/aid"
            android:textColor="@color/light"
            android:theme="@style/MyButton" />


    </LinearLayout>
</RelativeLayout>