<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layoutDirection="rtl"
    tools:context=".SettingActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_setting"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="3dp"
            android:transitionName="setting"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/setting"
            app:titleTextColor="@color/colorPrimaryDark1" />
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/layout233"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/line12423"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="0dp">

                <LinearLayout
                    android:id="@+id/line134"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?colorPrimary"
                    android:orientation="vertical">


                    <Switch
                        android:id="@+id/switch1"
                        android:layout_width="match_parent"
                        android:layout_height="?actionBarSize"
                        android:layout_margin="10dp"
                        android:text="  حالت شب  " />

                    <Switch
                        android:id="@+id/switchk"
                        android:layout_width="match_parent"
                        android:layout_height="?actionBarSize"
                        android:layout_margin="10dp"
                        android:text="  بارگیری خودکار تصاویر  "
                        android:visibility="gone" />


                    <Button
                        android:id="@+id/button_update"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/update"
                        android:textColor="?android:textColorPrimary"


                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="0dp">

                <LinearLayout
                    android:id="@+id/Liner34534"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?colorPrimary"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button_change1"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/change_deta"
                        android:textColor="?android:textColorPrimary"
                        />

                    <Button
                        android:id="@+id/exit"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/koroj"
                        android:textColor="@color/Wring" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
