<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/alal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layoutDirection="ltr"
    tools:context=".CompleteProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_okk">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/image_complete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_complete_account"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    >

                    <EditText
                        android:id="@+id/name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name"
                        android:maxLength="20"
                        android:nextFocusDown="@id/last_name_edit_text"
                        android:singleLine="true"
                        android:inputType="text"
                        android:importantForAutofill="no" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/last_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:nextFocusDown="@id/shomare_edit_text"
                    app:counterEnabled="true"
                    app:counterMaxLength="30">

                    <EditText
                        android:id="@+id/last_name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_last_name"
                        android:maxLength="30"
                        android:nextFocusDown="@id/shomare_edit_text"
                        android:singleLine="true"
                        android:inputType="text"
                        android:autofillHints="no" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/shomare_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="10">

                    <EditText
                        android:id="@+id/shomare_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_student_number"
                        android:inputType="number"
                        android:maxLength="10"
                        android:singleLine="true" />


                </com.google.android.material.textfield.TextInputLayout>


                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textAlignment="center"
                    tools:ignore="RtlCompat" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_okk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:background="@drawable/custom_button_3"
            android:text="@string/aid"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark1"
        android:gravity="center"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/txt_load"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waiting"
                android:textColor="@color/light"
                android:textSize="18sp" />

            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/avi11"
                style="@style/AVLoadingIndicatorView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="10dp"
                android:visibility="visible"
                app:indicatorColor="#FFFFFF"
                app:indicatorName="BallPulseIndicator" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>